--- a/css/styles.css
+++ b/css/styles.css
@@ -353,6 +353,7 @@ footer {
 
 .team-head {
   margin: auto;
+  padding-bottom: 50px;
   text-align: center;
 }
 
@@ -450,4 +451,39 @@ footer {
   width: 20px;
   height: 20px;
   fill: var(--icons-color);
+}
+
+.clients-list {
+  display: flex;
+  flex-wrap: calc(100% / 6);
+}
+
+.clients-list-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.clients-list-item-icon {
+  display: flex;
+  width: 106px;
+  height: 60px;
+  fill: var(--icons-color);
+}
+
+.clients-list-item-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 170px;
+  height: 92px;
+  border: 1px solid var(--icons-color);
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
+.clients-list-item-link:hover {
+  border: 1px solid var(--brandcolor);
+}
+
+.clients-list-item-link:hover .clients-list-item-icon {
+  fill: var(--brandcolor);
 }
