--- a/css/styles.css
+++ b/css/styles.css
@@ -44,12 +44,12 @@ body {
 }
 
 .link:hover,
-.link:target {
+.link:focus {
   color: var(--brandcolor);
 }
 
 button:hover,
-button:target {
+button:focus {
   color: var(--background-color-white);
   background-color: var(--brandcolor);
 }
@@ -406,6 +406,11 @@ footer {
   margin-right: 8px;
 }
 
+.portfolio-buttons-item:hover,
+.portfolio-buttons-item:focus {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
@@ -548,7 +553,7 @@ footer {
 }
 
 .social-list-item-link-footer:hover,
-.social-list-item-link-footer:target {
+.social-list-item-link-footer:focus {
   background: var(--brandcolor) ;
 }
 
