--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ html {
   --nav-border: #ececec;
   --portfolio-border: #eeeeee;
   --icons-color: #afb1b8;
+  --gradient: rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4);
 }
 
 h1,
@@ -165,7 +166,6 @@ footer {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--background-color-white);
-  background: var(--background-color);
 }
 
 .btn {
@@ -341,12 +341,12 @@ footer {
   padding-top: 200px;
   padding-bottom: 200px;
   background: var(--background-color);
-  background-image: url(../images/background-image.jpg); 
-  background:linear-gradient(rgba(47, 48, 58, 0,4));
+  background-image: linear-gradient(var(--gradient)), url(../images/background-image.jpg);
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: contain;
 }
+
 
 /* Наши сильные стороны */
 
