--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,11 @@ footer {
   color: var(--brandcolor);
 }
 
+
+.header-portfolio {
+  border-bottom: 1px solid #ECECEC;
+}
+
 .header {
   display: flex;
   align-items: center;
@@ -304,7 +309,6 @@ footer {
 .header-nav {
   display: flex;
   align-items: center;
-  /* height: 80px; */
 }
 
 /* Navigation */
